<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armando_controller</name>
  <version>1.0.0</version>
  <description>This package implements a controller node for the Armando robotic arm using ROS 2 publishers and subscribers.</description>
  <maintainer email="l.tulino@studenti.unina.it">Luca Tulino</maintainer>
  <author email="a.tribuzi@studenti.unina.it">Alessandro Tribuzi</author>
  <author email="lu.meglio@studenti.unina.it">Luca Meglio</author>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

